--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/node": "^16.18.86",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
-    "axios": "^1.6.7",
+    "axios": "^0.21.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,14 +30,14 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "api-code-gen": "openapi-generator-cli generate -i ./api-dev-local.json -g typescript-axios -o ./src/api"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
