--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/system": "^5.15.12",
+    "@mui/x-data-grid": "^6.19.6",
     "@openapitools/openapi-generator-cli": "^2.7.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
