--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
     "axios": "^0.21.4",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
